template/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: XXXXX
  labels:
    argocd.argoproj.io/instance: XXXXX
spec:
  host: XXXXX-test.apps.cluster-6e99.6e99.sandbox1286.example.opentlc.com
  to:
    kind: Service
    name: XXXXX
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
